[tool.poetry]
name = "aarre laakso"
version = "0.0.1"
description = "Personal website for Aarre Laakso"
authors = ["Aarre Laakso <aarre.laakso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.0"
nltk = "^3.8.1"
textblob = "^0.18.0.post0"
wordcloud = "^1.9.3"
spacy = "^3.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
