[tool.poetry]
name = "aarre-github-io"
version = "0.1.0"
description = ""
authors = ["Aarre Laakso <aarre.laakso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
html5validator = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
